syntax = "proto3";
package bkvpb;

option go_package="pb";

import "google/protobuf/timestamp.proto";

enum ResponseStatus {
    CREATED = 0;
    FOUND = 1;
    NOTFOUND = 2;
    DELETED = 3;
}

message GetRequest {
    string key = 1;
}

message SetRequest {
    string key = 1;
    string value = 2;
}

message DeleteRequest {
    string key = 1;
}

message Response {
    ResponseStatus status = 1;
    google.protobuf.Timestamp response_timestamp = 2;
    string value = 3;
}

service BKVService {
    rpc Get (GetRequest) returns (Response);
    rpc Set (SetRequest) returns (Response);
    rpc BatchGet(stream GetRequest) returns (stream Response);
    rpc BatchSet(stream SetRequest) returns (stream Response);
}